--- a/project/src/app/emp/emp.component.html
+++ b/project/src/app/emp/emp.component.html
@@ -1,3 +1,90 @@
-<p>
-  emp works!
-</p>
+<form class="form-horizontal">
+  <div class="well bs-component">
+    <fieldset>
+      <div class="row"> 
+        <div class="form-group">
+          <label class="col-lg-2 control-label">아이디</label>
+          <div class="col-lg-3">                              
+            <input type="text" class="form-control" id="" name=""/>
+          </div>
+          <label class="col-lg-2 control-label">이름</label>
+          <div class="col-lg-3">
+            <input type="text" class="form-control" id="" name="" />
+          </div>                          
+        </div>
+      </div>
+
+      <div class="row"> 
+        <div class="form-group">
+          <label class="col-lg-2 control-label">연락처</label>
+          <div class="col-lg-3">                              
+            <input type="text" class="form-control" id="" name="" placeholder="핸드폰번호(숫자만 입력)"  />
+          </div>
+          <label class="col-lg-2 control-label">이메일</label>
+          <div class="col-lg-4">
+            <input type="text" class="form-control" id="" name="" placeholder="example@kr.com"  />
+          </div>                          
+        </div>
+      </div>
+
+      <div class="row"> 
+        <div class="form-group">
+          <label class="col-lg-2 control-label">부서</label>
+          <div class="col-lg-3">                              
+            <select class="form-control">
+              <option>1</option>
+              <option>2</option>
+              <option>3</option>
+            </select>
+          </div>                                  
+        </div>
+      </div>
+      <p class="text-right">
+        <a class="btn btn-default btn-sm" id="btn_del">삭제</a> 
+        <a class="btn btn-primary btn-sm" id="btn_mod">수정</a> 
+        <a class="btn btn-default btn-sm" id="btn_cancel">닫기</a> 
+      </p>
+    </fieldset>
+  </div>
+
+  <p class="text-right">
+    <a class="btn btn-success btn-sm">등록</a>
+  </p>
+
+  <div class="table-responsive">
+    <table class="table table-bordered">
+      <thead>
+        <tr class="active">
+          <th>ID</th>
+          <th>이름</th>
+          <th>연락처</th>
+          <th>이메일</th>
+          <th>부서</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>ID</td>
+          <td>이름</td>
+          <td>연락처</td>
+          <td>이메일</td>
+          <td>부서</td>
+        </tr>
+        <tr>
+          <td>ID</td>
+          <td>이름</td>
+          <td>연락처</td>
+          <td>이메일</td>
+          <td>부서</td>
+        </tr>
+        <tr>
+          <td>ID</td>
+          <td>이름</td>
+          <td>연락처</td>
+          <td>이메일</td>
+          <td>부서</td>
+        </tr>
+      </tbody>       
+    </table>
+  </div>
+</form>
