--- a/project/src/app/emp/emp.component.html
+++ b/project/src/app/emp/emp.component.html
@@ -40,16 +40,12 @@
         </div>
       </div>
       <p class="text-right">
-        <a class="btn btn-default btn-sm" id="btn_del">삭제</a> 
-        <a class="btn btn-primary btn-sm" id="btn_mod">수정</a> 
+        <a class="btn btn-success btn-sm" id="btn_del">삭제</a>&nbsp;
+        <a class="btn btn-primary btn-sm" id="btn_mod">수정</a>&nbsp;
         <a class="btn btn-default btn-sm" id="btn_cancel">닫기</a> 
       </p>
     </fieldset>
   </div>
-
-  <p class="text-right">
-    <a class="btn btn-success btn-sm">등록</a>
-  </p>
 
   <div class="table-responsive">
     <table class="table table-bordered">
@@ -64,25 +60,25 @@
       </thead>
       <tbody>
         <tr>
-          <td>ID</td>
-          <td>이름</td>
-          <td>연락처</td>
+          <td>1</td>
+          <td>황대길</td>
+          <td>010-1111-2222</td>
           <td>이메일</td>
-          <td>부서</td>
+          <td>총무부</td>
         </tr>
         <tr>
-          <td>ID</td>
-          <td>이름</td>
-          <td>연락처</td>
+          <td>2</td>
+          <td>정재훈</td>
+          <td>010-1111-2222</td>
           <td>이메일</td>
-          <td>부서</td>
+          <td>개발부>개발1팀</td>
         </tr>
         <tr>
-          <td>ID</td>
-          <td>이름</td>
-          <td>연락처</td>
+          <td>3</td>
+          <td>전미경</td>
+          <td>010-1111-2222</td>
           <td>이메일</td>
-          <td>부서</td>
+          <td>개발부>개발1팀</td>
         </tr>
       </tbody>       
     </table>
