--- a/project/src/app/emp/emp.component.html
+++ b/project/src/app/emp/emp.component.html
@@ -61,7 +61,7 @@
       <tbody>
         <tr>
           <td>1</td>
-          <td>황대길</td>
+          <td><a (click)="updateInfo()">황대길</a></td>
           <td>010-1111-2222</td>
           <td>이메일</td>
           <td>총무부</td>
