--- a/project/src/app/note/newnote/newnote.component.html
+++ b/project/src/app/note/newnote/newnote.component.html
@@ -1,21 +1,29 @@
-<form class="form-horizontal">
-  <div class="well bs-component">
-    <fieldset>
-      <div class="row">        
-        <label for="notetitle">제목</label>
-        <input class="form-control" type="text">
-              <div class="form-group">
-            <div class="form-group">
-              <label for="comment">내용</label>
-              <textarea class="form-control" rows="7" id="comment"></textarea>
+<div class="table-responsive">
+  <form id="frmForm" name="frmForm" class="form-horizontal">
+    <h4 class="sub-header">게시판 글작성</h4>
+    <div class="control-group" id="fields">
+      <div class="controls">
+        <div class="well bs-component">
+
+          <div class="form-group">
+            <label class="col-lg-2 control-label">제목</label>
+            <div class="col-lg-8">
+              <input type="text" class="form-control" id="title" name="title" />
             </div>
           </div>
+
+          <div class="form-group">
+            <label for="textArea" class="col-lg-2 control-label">내용</label>
+            <div class="col-lg-8">
+              <textarea class="form-control" rows="10" id="cont" name="cont" style="resize: none;"></textarea>
+            </div>
+          </div>
+          <p class="text-right">
+            <a class="btn btn-default btn-sm" id="btn_cancel" routerLink="../../note">취소</a>
+            <a class="btn btn-primary btn-sm" id="btn_new">등록</a>
+          </p>
         </div>
-        <p class="text-right">
-          <a class="btn btn-primary btn-sm" id="btn_mod">등록</a>&nbsp;
-          <a class="btn btn-default btn-sm" id="btn_cancel" routerLink="../note">취소</a>
-        </p>
-      
-    </fieldset>
-  </div>
-</form>
+      </div>
+    </div>
+  </form>
+</div>
