--- a/project/src/app/note/note.component.css
+++ b/project/src/app/note/note.component.css
@@ -9,3 +9,20 @@ fieldset {
 a {
     cursor: pointer;
 }
+
+th{
+    width:70px;
+    background-color:#F6F8F8;
+    padding:7px;
+}
+td{
+    padding:7px;
+}
+h4{
+    color:#3399FF; 
+    font-weight:bold; 
+    font-size:15px;
+}
+table{
+    width:100%;
+}
