Trees in progress

--- a/project/src/app/dept/dept.component.html
+++ b/project/src/app/dept/dept.component.html
@@ -53,8 +53,8 @@
     <tbody>
       <tr *ngFor="let dept of depts">
         <td><a>{{dept.name}}</a></td>
-        <td>{{dept.chief}}</td>
-        <td>{{dept.upId}}</td>
+        <td>{{dept.chiefName}}</td>
+        <td>{{dept.upName}}</td>
       </tr>
     </tbody>       
   </table>
