--- a/project/src/app/note/note.component.html
+++ b/project/src/app/note/note.component.html
@@ -1,46 +1,34 @@
-<div class="table-responsive" ng-controller="Ctrl">
-  <div class="table-responsive" ng-controller="Ctrl">
-    <form role="form" id="frmForm" name="frmForm" class="form-horizontal">
-      <div class="container">
-        <h4 class="sub-header">게시판 상세보기</h4>
-        <div class="table-responsive">
-          <table class="table-bordered">
-            <tr>
-              <th>작성일</th>
-              <td>
-                <!-- {{note.ts}} -->
-              </td>
-            </tr>
-            <tr>
-              <th>작성자</th>
-              <td>
-                <!-- {{emp.name}} -->
-              </td>
-            </tr>
-            <tr>
-              <th>제목</th>
-              <td>
-                <!-- {{note.title}} -->
-              </td>
-            </tr>
-            <tr>
-              <th>내용</th>
-              <td>
-                  {{id}}
-                <!-- {{note.body}} -->
-              </td>
-            </tr>
-          </table>
-        </div>
-        <!-- 게시판 버튼 -->
-        <p class="text-right" style="margin-top: 10px">
-          <a class="btn btn-default btn-sm" id="btn_del" href="#" onclick="">삭제</a>&nbsp;
-          <a class="btn btn-primary btn-sm" id="btn_mod" href="#" onclick="">수정</a>&nbsp;
-          <a class="btn btn-default btn-sm" id="btn_list">목록</a>
-        </p>
-      </div>
-    </form>
-  </div>
+<div  ng-controller="Ctrl">      
+    <div *ngIf="BodyFormYn=='Y'">
+      <h4 class="sub-header">게시판 상세보기</h4>
+      <table class="table-bordered" >        
+        <tr class="active">
+          <th >작성자</th>
+          <td>{{note?.name}}</td>
+          <th >작성일</th>
+          <td >{{note?.ts}}</td>
+        </tr>        
+        <tr style="text-align:left">
+            <th >제목</th>
+            <td colspan="3">
+              {{note?.title}}
+            </td>
+        </tr>
+        <tr style="text-align:left">
+          <th >내용</th>
+          <td colspan="3" row="3">
+            {{note?.body}}
+          </td>
+        </tr>
+      </table>
+      <!-- 게시판 버튼 -->
+      <p class="text-right" style="margin-top: 10px">
+        <a class="btn btn-default btn-sm" id="btn_del" href="#" onclick="">삭제</a>&nbsp;
+        <a class="btn btn-primary btn-sm" id="btn_mod" href="#" onclick="">수정</a>&nbsp;
+        <a class="btn btn-default btn-sm" id="btn_list" (click)="btnListClick()">목록</a>
+      </p>
+    </div>  
+
 
   <p class="text-right">
     <a class="btn btn-success btn-sm" id="btn_new" routerLink="../note/newnote">글작성</a>
@@ -57,7 +45,7 @@
     <tbody>
       <tr *ngFor="let note of notes">
         <td>{{note.id}}</td>
-        <td><a (click)="btnTitle_click(note.id)">{{note.title}}</a></td>
+        <td><a (click)="btnTitleClick(note.id)">{{note.title}}</a></td>
         <td>{{note.name}}</td>
         <td>{{note.stamp}}</td>
       </tr>
