--- a/project/src/app/org-chart/org-chart.component.html
+++ b/project/src/app/org-chart/org-chart.component.html
@@ -1,3 +1,3 @@
 <div>
-  <ui-tree [org]="org" [orgs]="orgs"></ui-tree>
+  <ui-tree [org]="org" [orgs]="orgs" (move)="orgChange($event)"></ui-tree>
 </div>
