--- a/project/src/app/note/newnote/newnote.component.html
+++ b/project/src/app/note/newnote/newnote.component.html
@@ -1,26 +1,30 @@
 <div class="table-responsive">
-  <form id="frmForm" name="frmForm" class="form-horizontal">
+  <form #f="ngForm" class="form-horizontal"  (ngSubmit)="add(f)">
     <h4 class="sub-header">게시판 글작성</h4>
     <div class="control-group" id="fields">
       <div class="controls">
         <div class="well bs-component">
+          
+          <div>            
+            <input type="text" id="name" name="name" value="김길동" [ngModel]="name" />   
+            <input type="text" id="ts" name="ts" value="2018-01-07 14:25:02" [ngModel]="ts"/>   
+          </div>
 
           <div class="form-group">
             <label class="col-lg-2 control-label">제목</label>
             <div class="col-lg-8">
-              <input type="text" class="form-control" id="title" name="title" />
+              <input type="text" class="form-control" id="title" name="title" [ngModel]="title"/>
             </div>
           </div>
-
           <div class="form-group">
             <label for="textArea" class="col-lg-2 control-label">내용</label>
             <div class="col-lg-8">
-              <textarea class="form-control" rows="10" id="cont" name="cont" style="resize: none;"></textarea>
+              <textarea class="form-control" rows="10" id="body" name="body" style="resize: none;" [ngModel]="body"></textarea>
             </div>
           </div>
           <p class="text-right">
             <a class="btn btn-default btn-sm" id="btn_cancel" routerLink="../../note">취소</a>
-            <a class="btn btn-primary btn-sm" id="btn_new">등록</a>
+            <button type="submit" class="btn btn-primary btn-sm" id="btn_new" >등록</button>
           </p>
         </div>
       </div>
