--- a/project/src/app/app.component.html
+++ b/project/src/app/app.component.html
@@ -1,4 +1,8 @@
-<div class="container" style="margin-top: 20px">
+<div *ngIf="loginYN=='N'">
+  <app-login></app-login>
+</div>
+
+<div *ngIf="loginYN=='Y'" class="container" style="margin-top: 20px">
   <div class="bs-docs-section clearfix">
     <div class="row">
       <div class="col-lg-12">
@@ -20,7 +24,7 @@
                   <li routerLinkActive="active"><a routerLink="org-chart">조직도</a></li>
                   <li routerLinkActive="active"><a routerLink="doc">전자결재</a></li>
                   <li routerLinkActive="active"><a routerLink="note">게시판</a></li>
-                  <li routerLinkActive="active"><a routerLink="dept">부서관리</a></li>
+                  <!-- <li routerLinkActive="active"><a routerLink="dept">부서관리</a></li> -->
                   <li routerLinkActive="active"><a routerLink="emp">사원관리</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
@@ -33,6 +37,5 @@
       </div>
     </div>
   </div>
-
   <router-outlet></router-outlet>
 </div>
