--- a/project/src/app/org-chart/org-chart.component.css
+++ b/project/src/app/org-chart/org-chart.component.css
@@ -1,8 +1,3 @@
-#div1, #div2 {
-  float: left;
-  width: 100px;
-  height: 35px;
-  margin: 10px;
-  padding: 10px;
-  border: 1px solid black;
+tr {
+  cursor: pointer;
 }
