--- a/project/src/app/org-chart/org-chart.component.html
+++ b/project/src/app/org-chart/org-chart.component.html
@@ -5,11 +5,12 @@
 <div class="container">
   <table class="table">
     <tr *ngIf="chief">
+      <td><input type='radio' name="chief" (click)="relieve($event)" title="해임"></td>
       <td>{{chief.name}}</td>
-      <td>{{chief.code}}</td>
-      <td colspan="2">{{dept.name}}장</td>
+      <td colspan="3">{{dept.name}}장</td>
     </tr>
-    <tr *ngFor="let e of emps">
+    <tr *ngFor="let e of emps" id="m_{{e.id}}" draggable="true" (dragstart)="drag($event)">
+      <td><input type='radio' name="chief" [checked]="e.id==chief.id" (click)="appoint($event)" title="부서장"></td>
       <td>{{e.name}}</td>
       <td>{{e.code}}</td>
       <td>{{e.phone}}</td>
