--- a/project/src/app/app.component.html
+++ b/project/src/app/app.component.html
@@ -1,8 +1,9 @@
 <div *ngIf="loginYN=='N'">
   <app-login></app-login>
 </div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js" charset="utf-8"></script> 
 
-<div *ngIf="loginYN=='Y'" class="container" style="margin-top: 20px">
+<div  class="container" style="margin-top: 20px"><!-- *ngIf="loginYN=='Y'" -->
   <div class="bs-docs-section clearfix">
     <div class="row">
       <div class="col-lg-12">
