--- a/project/src/app/note/newnote/newnote.component.html
+++ b/project/src/app/note/newnote/newnote.component.html
@@ -5,29 +5,32 @@
       <div class="controls">
         <div class="well bs-component">
           
-          <div>            
-            <input type="text" id="name" name="name" value="김길동" [ngModel]="name" />   
-            <input type="text" id="ts" name="ts" value="2018-01-07 14:25:02" [ngModel]="ts"/>   
+          <div ng-app="myApp" ngControl="myCtrl" hidden>            
+            <input type="text" id="author" name="author" [ngModel]="author" />   
+            <!-- value="1" -->
+            <input type="text" id="ts" name="ts" [ngModel]="ts">
+            <!-- value="2018-01-07 14:25:02" -->
           </div>
 
           <div class="form-group">
             <label class="col-lg-2 control-label">제목</label>
             <div class="col-lg-8">
-              <input type="text" class="form-control" id="title" name="title" [ngModel]="title"/>
+              <input type="text" class="form-control" id="title" name="title" [ngModel]="title" required/>
             </div>
           </div>
           <div class="form-group">
             <label for="textArea" class="col-lg-2 control-label">내용</label>
             <div class="col-lg-8">
-              <textarea class="form-control" rows="10" id="body" name="body" style="resize: none;" [ngModel]="body"></textarea>
+              <textarea class="form-control" rows="10" id="body" name="body" style="resize: none;" [ngModel]="body" required></textarea>
             </div>
           </div>
           <p class="text-right">
             <a class="btn btn-default btn-sm" id="btn_cancel" routerLink="../../note">취소</a>
-            <button type="submit" class="btn btn-primary btn-sm" id="btn_new" >등록</button>
+            <button type="submit" class="btn btn-primary btn-sm" id="btn_new" routerLink="../../note">등록</button>
           </p>
         </div>
       </div>
-    </div>
+    </div>    
   </form>
+  
 </div>
