--- a/project/src/app/app.component.html
+++ b/project/src/app/app.component.html
@@ -1,7 +1,6 @@
-<div *ngIf="loginYN=='N'">
+<!-- <div *ngIf="loginYN=='N'">
   <app-login></app-login>
-</div>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js" charset="utf-8"></script> 
+</div> -->
 
 <div  class="container" style="margin-top: 20px"><!-- *ngIf="loginYN=='Y'" -->
   <div class="bs-docs-section clearfix">
