--- a/project/src/app/note/note.component.html
+++ b/project/src/app/note/note.component.html
@@ -1,37 +1,40 @@
-<div  ng-controller="Ctrl">      
-    <div *ngIf="BodyFormYn=='Y'">
-      <h4 class="sub-header">게시판 상세보기</h4>
-      <table class="table-bordered" >        
-        <tr class="active">
-          <th >작성자</th>
-          <td>{{note?.name}}</td>
-          <th >작성일</th>
-          <td >{{note?.ts | date:'yyyy년 MM월 dd일 HH시 mm분 ss초'}}</td>
-        </tr>        
-        <tr style="text-align:left">
-            <th >제목</th>
-            <td colspan="3">
-              {{note?.title}}
-            </td>
-        </tr>
-        <tr style="text-align:left">
-          <th >내용</th>
-          <td colspan="3" row="3">
-            {{note?.body}}
-          </td>
-        </tr>
-      </table>
-      <!-- 게시판 버튼 -->
-      <p class="text-right" style="margin-top: 10px">
-        <a class="btn btn-default btn-sm" id="btn_del" (click)="remove(note.id)">삭제</a>&nbsp;
-        <a class="btn btn-primary btn-sm" id="btn_mod" >수정</a>&nbsp;
-        <a class="btn btn-default btn-sm" id="btn_list" (click)="btnListClick()">목록</a>
-      </p>
-    </div>  
+<div *ngIf="formStat=='input'">
+  <app-newnote (outputProperty)="outputEvent($event)" [updateId]="updateId"></app-newnote>
+</div>
+    
+<div *ngIf="formStat=='detail'">
+  <h4 class="sub-header">게시판 상세보기</h4>
+  <table class="table-bordered" >        
+    <tr class="active">
+      <th >작성자</th>
+      <td>{{note?.name}}</td>
+      <th >작성일</th>
+      <td >{{note?.ts | date:'yyyy년 MM월 dd일 HH시 mm분 ss초'}}</td>
+    </tr>        
+    <tr style="text-align:left">
+        <th >제목</th>
+        <td colspan="3">
+          {{note?.title}}
+        </td>
+    </tr>
+    <tr style="text-align:left">
+      <th >내용</th>
+      <td colspan="3" row="3">
+        {{note?.body}}
+      </td>
+    </tr>
+  </table>
+  <!-- 게시판 버튼 -->
+  <p class="text-right" style="margin-top: 10px">
+    <a class="btn btn-default btn-sm" id="btn_del" (click)="remove(note.id)">삭제</a>&nbsp;
+    <a class="btn btn-primary btn-sm" id="btn_mod" (click)="goupdate(note.id)" >수정</a>&nbsp;
+    <a class="btn btn-default btn-sm" id="btn_list" (click)="btnListClick()">목록</a>
+  </p>
+</div>  
 
-<div *ngIf="ListFormYn=='Y'">
+<div *ngIf="formStat=='list'">
   <p class="text-right">
-    <a class="btn btn-success btn-sm" id="btn_new" routerLink="../note/newnote">글작성</a>
+    <a class="btn btn-success btn-sm" id="btn_new" (click)="btnNewClick()">글작성</a>
   </p>
   <table class="table table-bordered">
     <thead>
@@ -41,8 +44,7 @@
         <th class="col-lg-2">작성자</th>
         <th class="col-lg-2">등록일</th>
       </tr>
-    </thead>
-    
+    </thead>    
     <tbody>
       <tr *ngFor="let note of notes">
         <td>{{note.id}}</td>
@@ -51,6 +53,5 @@
         <td type="date">{{note.ts | date:'yy.MM.dd HH:mm:ss'}}</td>
       </tr>
     </tbody>   
-  </table>  
-</div>
+  </table>    
 </div>
