--- a/project/src/app/login/login.component.html
+++ b/project/src/app/login/login.component.html
@@ -1,6 +1,5 @@
 <div class="out">
   <div class="in">
-
     <h1 class="text-info">
       TopCredu Login
     </h1>
@@ -28,8 +27,8 @@
             <h5 class="text-danger">{{errorMessage}}</h5>
           </div>
           <p class="text-center">
-            <a class="btn btn-success btn-sm">회원가입</a>&nbsp;
-            <button type="submit" class="btn btn-primary btn-sm">로그인</button>
+            <!-- <a class="btn btn-success" (click)="join()">회원가입</a>&nbsp; -->
+            <button type="submit" class="btn btn-primary">로그인</button>
           </p>
         </fieldset>
       </div>  
