Fixed:  error on empty emp list

--- a/project/src/app/org-chart/org-chart.component.css
+++ b/project/src/app/org-chart/org-chart.component.css
@@ -5,8 +5,8 @@ tr {
   cursor: move;
 }
 #emp_list_header {
-  margin: 0 0 5px 50px;
+  margin: 0 0 5px 28px;
 }
 .sub {
-  background-color: silver;
+  background-color: beige;
 }
