--- a/project/src/app/org-chart/tree/tree.component.html
+++ b/project/src/app/org-chart/tree/tree.component.html
@@ -1,6 +1,6 @@
 <ul>
   <li *ngFor="let o of orgs" draggable="true" (dragstart)="drag($event)"
-          id="{{o.id}}" (dragover)="allow($event)" (drop)="drop($event,o)"
+          id="d_{{o.id}}" (dragover)="allow($event)" (drop)="drop($event,o)"
           (click)="click($event,o)">
     {{o.name}}
     <ui-tree [orgs]="o.sub"></ui-tree>
