--- a/project/src/app/org-chart/org-chart.component.html
+++ b/project/src/app/org-chart/org-chart.component.html
@@ -4,27 +4,33 @@
       <ui-tree [orgs]="orgs"></ui-tree>
     </div>
 
-    <div class="col-lg-8" *ngIf="dept && (!emps || !emps.length)">
-      <h4 id="emp_list_header" (click)="relieve()">
-        {{dept.name}}
-      </h4>
-    </div>
-    <div class="col-lg-8" *ngIf="emps && emps.length">
-      <h4 id="emp_list_header">
-        {{dept.name}}장 &nbsp; 
-        <span *ngIf="dept.chief" (click)="relieve()">{{dept.chiefName}}</span>
-        <span *ngIf="!dept.chief">(공석)</span>
+    <div class="col-lg-8">
+      <h4 id="emp_list_header" *ngIf="dept">
+        <span>{{dept.name}}</span> &nbsp; <button (click)="addDept()">+</button> &nbsp;
+        <button *ngIf="!emps || !emps.length" (click)="deleteDept()">x</button>
+        <span *ngIf="emps && emps.length">
+          리더:
+          <span *ngIf="dept.chief">{{dept.chiefName}}  &nbsp; <button (click)="relieve()">x</button></span>
+          <span *ngIf="!dept.chief">(공석)</span>
+        </span>
       </h4>
       <table class="table table-responsive">
         <tr *ngFor="let e of emps" id="e_{{e.id}}"
             [class.sub]="e.deptId != dept.id"
             [draggable]="e.deptId == dept.id && e.id != dept.chief"
             (dragstart)="drag($event)">
-          <td><input type='radio' name="chief" title="리더" (click)="appoint(e)"
-                [checked]="e.id == dept.chief"> &nbsp; {{e.name}}</td>
+          <td>
+            <input type="radio" name="chief" title="리더"
+              [checked]="e.id == dept.chief" (click)="appoint(e)"> &nbsp;
+              {{e.name}}
+          </td>
           <td>{{e.code}}</td>
           <td>{{e.phone}}</td>
           <td>{{e.email}}</td>
+          <td>
+            <button *ngIf="e.deptId == dept.id && e.id != dept.chief"
+                  (click)="deleteEmp($event, e.id)">x</button>
+          </td>
         </tr>
       </table>
     </div>
