--- a/project/src/app/org-chart/tree/tree.component.css
+++ b/project/src/app/org-chart/tree/tree.component.css
@@ -1,3 +1,8 @@
-li ul [draggable="true"] {
-  cursor: move;
+li {
+  list-style-type: none;
+  border: 1px solid gainsboro;
+  padding: 6px 0 6px 6px;
+}
+li button {
+  float: right;
 }
