Organization Chart done!

--- a/project/src/app/org-chart/org-chart.component.css
+++ b/project/src/app/org-chart/org-chart.component.css
@@ -11,7 +11,7 @@ header {
   width: 50%;
   text-align: center;
 }
-header > span, div > span {
+header > span, header > input, div > input {
   float: right;
 }
 input {
