--- a/project/src/app/app.component.html
+++ b/project/src/app/app.component.html
@@ -1,9 +1,9 @@
 <div *ngIf="loginProc=='join'">
-  <app-join (outputProperty)="outputEvent($event)"></app-join>
+  <app-join (outputProperty)="receive($event)"></app-join>
 </div>
 
 <div *ngIf="loginProc=='login'">
-  <app-login (outputProperty)="outputEvent($event)"></app-login>
+  <app-login (outputProperty)="receive($event)"></app-login>
 </div>
 
 <div *ngIf="loginProc=='loginSuccess'" class="container" style="margin-top: 20px">
@@ -20,7 +20,7 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">PROJECT</a>
+                <a class="navbar-brand">PROJECT</a>
               </div>
             
               <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -29,7 +29,7 @@
                   <li routerLinkActive="active"><a routerLink="doc">전자결재</a></li>
                   <li routerLinkActive="active"><a routerLink="note">게시판</a></li>
                   <!-- <li routerLinkActive="active"><a routerLink="dept">부서관리</a></li> -->
-                  <li routerLinkActive="active"><a routerLink="emp">사원관리</a></li>
+                  <!-- <li routerLinkActive="active"><a routerLink="emp">사원관리</a></li> -->
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                   <li><a style="cursor: pointer;" (click)="logOut()">로그아웃</a></li>  
