--- a/project/src/app/emp/emp.component.html
+++ b/project/src/app/emp/emp.component.html
@@ -4,36 +4,10 @@
       <fieldset>
         <div class="row"> 
           <div class="form-group">
-            <label class="col-lg-2 control-label">아이디</label>
-            <div class="col-lg-3">                              
-              <input type="text" class="form-control" name="code" [value]="selectedEmp.code" [ngModel]="f.value.code"  />
-            </div>
-            <label class="col-lg-2 control-label">이름</label>
-            <div class="col-lg-3">
-              <input type="text" class="form-control" name="name" [ngModel]="f.value.name" [value]="selectedEmp.name" />
-            </div>                          
-          </div>
-        </div>
-
-        <div class="row"> 
-          <div class="form-group">
-            <label class="col-lg-2 control-label">연락처</label>
-            <div class="col-lg-3">                              
-              <input type="text" class="form-control" name="phone" [ngModel]="f.value.phone" [value]="selectedEmp.phone" placeholder="010-0000-0000" />
-            </div>
-            <label class="col-lg-2 control-label">이메일</label>
-            <div class="col-lg-4">
-              <input type="text" class="form-control" name="email" [ngModel]="f.value.email" [value]="selectedEmp.email" placeholder="example@kr.com" />
-            </div>                          
-          </div>
-        </div>
-
-        <div class="row"> 
-          <div class="form-group">
             <label class="col-lg-2 control-label">부서</label>
             <div class="col-lg-3">                              
               <select class="form-control" name="deptId" [ngModel]="f.value.deptId">
-                <option *ngFor="let dept of depts" [value]="dept.id" [selected]="selectedEmp.deptId==dept.id?true:null">{{dept.name}}</option>               
+                <option *ngFor="let dept of depts" [value]="dept.id" [selected]="selectedEmp.deptId==dept.id?true:null">{{dept?.name}}</option>               
               </select>
             </div>                                  
           </div>
