--- a/project/src/app/note/note.component.css
+++ b/project/src/app/note/note.component.css
@@ -26,3 +26,30 @@ h4{
 table{
     width:100%;
 }
+
+
+.center {
+    text-align: center;        
+}
+
+.pagination {
+    display: inline-block;
+}
+
+.pagination a {
+    color: black;
+    float: left;
+    padding: 2px 4px;
+    text-decoration: none;
+    transition: background-color .3s;
+    border: 1px solid #ddd;
+    margin: 0 1px;
+}
+
+.pagination a.active {
+    background-color: #4CAF50;
+    color: white;
+    border: 1px solid #4CAF50;
+}
+
+.pagination a:hover:not(.active) {background-color: #ddd;}
